<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".MSpray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/sprayer_form_textview_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sprayHeader"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/sprayer_form_textview_sprayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/sprayerName"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sprayer_form_textview_roomsSprayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roomsSprayedLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/sprayer_form_edittext_roomsSprayedValue"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="24sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sprayer_form_textview_sheltersSprayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sheltersSprayedLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/sprayer_form_edittext_sheltersSprayedValue"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="24sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sprayer_form_textview_canRefilled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/refillCanLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/sprayer_form_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/sprayer_form_radiobutton_canRefilledYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="false"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/sprayer_form_radiobutton_canRefilledNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="true"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/sprayer_form_button_backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/back"
            android:textSize="28sp" />

        <Button
            android:id="@+id/sprayer_form_button_confirmButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/confirm"
            android:textSize="28sp" />
    </LinearLayout>

</RelativeLayout>