<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/darkgray"
    android:screenOrientation="portrait" >

    <TextView
        android:id="@+id/confirm_fendona_textview_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/grad3"
        android:gravity="center"
        android:text="@string/confirmKOrthrine"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/confirm_fendona_layout_innerLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/darkgray"
        android:padding="9dp" >

        <Button
            android:id="@+id/confirm_fendona_button_backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_selector_red"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="28sp" />

        <Button
            android:id="@+id/confirm_fendona_button_confirmButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_selector_green"
            android:text="@string/confirm"
            android:textColor="#fff"
            android:textSize="28sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/confirm_fendona_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_fendona_textview_title"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp" >

        <TableRow
            android:id="@+id/confirm_fendona_foreman_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/confirm_fendona_foreman_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/foreman"
                android:textSize="24sp" />

            <View
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/confirm_fendona_foreman_value"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:text="@string/emptyValue"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/confirm_fendona_sprayer_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/confirm_fendona_sprayer_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/sprayer"
                android:textSize="24sp" />

            <View
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/confirm_fendona_sprayer_value"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:text="@string/emptyValue"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/confirm_fendona_rooms_sprayed_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/confirm_fendona_rooms_sprayed_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/rooms"
                android:textSize="24sp" />

            <View
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/confirm_fendona_rooms_sprayed_value"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:text="@string/emptyValue"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/confirm_fendona_shelters_sprayed_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/confirm_fendona_shelters_sprayed_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/shelters"
                android:textSize="24sp" />

            <View
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/confirm_fendona_shelters_sprayed_value"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:text="@string/emptyValue"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/confirm_fendona_can_refilled_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/confirm_fendona_can_refilled_label"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/refillCan"
                android:textSize="24sp" />

            <View
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/confirm_fendona_can_refilled_value"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:text="@string/emptyValue"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>